Closed Bug 816603 Opened 13 years ago Closed 13 years ago

background-color does not print in certain site

Categories

(Core :: Printing: Output, defect)

18 Branch
x86
Windows 7
defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla20
Tracking Status
firefox18 + fixed
firefox19 + verified
firefox20 + verified

People

(Reporter: alice0775, Assigned: mattwoodrow)

References

Details

(Keywords: regression)

Attachments

(2 files)

Build Identifier: http://hg.mozilla.org/mozilla-central/rev/58a4e9501f7e Mozilla/5.0 (Windows NT 6.1; WOW64; rv:20.0) Gecko/20121129 Firefox/20.0 ID:20121129030820 This is spun off from Bug 816498. The problem is reproduced in Firefox18.0beta and later. Steps to Reproduce: 1. Open http://www.tizag.com/htmlT/htmlbackground.php 2. File > Page setup.. "Print Background (colors & images)" checked. 3. Print Actual results: Background-color of body element is missing Expected results: Should print Regression window(m-c) Bad(no backgound image): http://hg.mozilla.org/mozilla-central/rev/e327e66a027d Mozilla/5.0 (Windows NT 6.1; WOW64; rv:18.0) Gecko/18.0 Firefox/18.0 ID:20120924073014 Bad(no backgound image and no backgound): http://hg.mozilla.org/mozilla-central/rev/654489f4be25 Mozilla/5.0 (Windows NT 6.1; WOW64; rv:18.0) Gecko/18.0 Firefox/18.0 ID:20120924174724 Pushlog: http://hg.mozilla.org/mozilla-central/pushloghtml?fromchange=e327e66a027d&tochange=654489f4be25 Regression window(m-i) Bad(no backgound image): http://hg.mozilla.org/integration/mozilla-inbound/rev/1d33725cf167 Mozilla/5.0 (Windows NT 6.1; WOW64; rv:18.0) Gecko/18.0 Firefox/18.0 ID:20120923185215 Bad(no backgound image and no backgound): http://hg.mozilla.org/integration/mozilla-inbound/rev/f8e84de2291e Mozilla/5.0 (Windows NT 6.1; WOW64; rv:18.0) Gecko/18.0 Firefox/18.0 ID:20120923195716 Pushlog: http://hg.mozilla.org/integration/mozilla-inbound/pushloghtml?fromchange=1d33725cf167&tochange=f8e84de2291e Suspected: Bug 792314
Screen shot is available in attachment 686674 [details]
Attached file reduced html
Matt - can you look at whether a backout of bug 792314 is the best option to not ship this regression in 18?
Assignee: nobody → matt.woodrow
Correct invalidation within print preview (with DLBI) relies on that bug. That affects at least one reftest, and I'm not sure what impact it could have on real world use cases. I'll tackle this bug today and see if I can figure it out.
We used to call nsLayoutUtils::PaintFrame when painting an nsPageFrame, which called this. We need to do it manually now instead, just like nsSubDocumentFrame.
Attachment #686834 - Flags: review?(tnikkel)
Attachment #686834 - Flags: review?(tnikkel) → review+
Status: NEW → RESOLVED
Closed: 13 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla20
Comment on attachment 686834 [details] [diff] [review] Set the canvas color correctly [Approval Request Comment] Bug caused by (feature/regressing bug #): 792314 User impact if declined: Page background color does not print if requested Testing completed (on m-c, etc.): a few days on m-c Risk to taking this patch (and alternatives if risky): Low risk. Only affects printing with background colors. String or UUID changes made by this patch: None
Attachment #686834 - Flags: approval-mozilla-beta?
Attachment #686834 - Flags: approval-mozilla-aurora?
Comment on attachment 686834 [details] [diff] [review] Set the canvas color correctly low risk, regression fix, approved.
Attachment #686834 - Flags: approval-mozilla-beta?
Attachment #686834 - Flags: approval-mozilla-beta+
Attachment #686834 - Flags: approval-mozilla-aurora?
Attachment #686834 - Flags: approval-mozilla-aurora+
Depends on: 820494
I can reproduce this issue on FF 18b6. Mozilla/5.0 (Windows NT 6.1; WOW64; rv:18.0) Gecko/20100101 Firefox/18.0(20121231071231) Background images are not printed following steps from Comment 0.
In print preview background images are missing too.
(In reply to Ryan VanderMeulen from comment #10) > https://hg.mozilla.org/releases/mozilla-aurora/rev/ef562b6a621a > https://hg.mozilla.org/releases/mozilla-beta/rev/1e56f66d7ee9 Same problem for FF 19.b1 as the one mentioned in comment 11 and 12. This is not fixed yet. Mozilla/5.0 (Windows NT 6.1; WOW64; rv:19.0) Gecko/20100101 Firefox/19.0 (20130109111322)
Depends on: 831269
Unless the specific testcase called "reduced testcase" in this bug doesn't work correctly I think we should get a new bug(s) filed for the issues mentioned in comments 11, 12, and 13.
Same problem on FF 19b2 Windows 7x64. Mozilla/5.0 (Windows NT 6.1; WOW64; rv:19.0) Gecko/20100101 Firefox/19.0 (20130116072953)
Keywords: verifyme
Verified as fixed with the reduced testcase on Windows 7 32bit: Mozilla/5.0 (Windows NT 6.1; rv:19.0) Gecko/20100101 Firefox/19 (20130215130331) MarioMi, please file new bugs for what you can reproduce with the URL in comment 0.
Verified as fixed on: Mozilla/5.0 (Windows NT 6.1; rv:22.0) Gecko/20130220 Firefox/22.0 (20130220031126)
QA Contact: ioana.budnar
mass remove verifyme requests greater than 4 months old
Keywords: verifyme
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: