Bug 816603 - Set the correct canvas background color during print preview. r=tn, a=lsblakk